# python-sdk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/maschina_sdk/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py
