[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maschina-sdk"
version = "0.1.0"
description = "Official Python SDK for the Maschina API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Maschina Labs", email = "sdk@maschina.ai" }]
keywords = ["maschina", "ai", "agents", "autonomous", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.9",
  "httpx>=0.28",
  "typing-extensions>=4.12",
]

[project.urls]
Homepage = "https://maschina.ai"
Repository = "https://github.com/maschina-labs/sdk-python"
Documentation = "https://docs.maschina.ai"
"Bug Tracker" = "https://github.com/maschina-labs/sdk-python/issues"
Changelog = "https://github.com/maschina-labs/sdk-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "respx>=0.21",
  "ruff>=0.9",
  "pyright>=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/maschina_sdk"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
strict = true
